--- a/src/stylesheet/Calculator.css
+++ b/src/stylesheet/Calculator.css
@@ -2,8 +2,7 @@
   background-color: #848494;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  width: 100%;
+  min-width: 500px;
 }
 
 .screen {
