--- a/src/stylesheet/Calculator.css
+++ b/src/stylesheet/Calculator.css
@@ -2,7 +2,8 @@
   background-color: #848494;
   display: flex;
   flex-direction: column;
-  min-width: 500px;
+  width: 600px;
+  min-width: auto;
 }
 
 .screen {
