--- a/src/stylesheet/NavBar.css
+++ b/src/stylesheet/NavBar.css
@@ -2,16 +2,21 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #ffffffc5;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 1px 7px #ccc;
 }
 
 nav h1 {
-  font-size: 30px;
+  font-size: 50px;
   padding: 20px;
+  color: #6f9d50;
 }
 
 nav ul {
   display: flex;
   padding: 20px;
+  color: #50959d;
 }
 
 nav li {
