--- a/src/stylesheet/Home.css
+++ b/src/stylesheet/Home.css
@@ -9,10 +9,16 @@
 
 .home h2 {
   font-size: 26px;
+  background-color: #ffffffc5;
+  backdrop-filter: blur(5px);
+  border-radius: 5px;
 }
 
 .home p {
   font-size: 20px;
   max-width: 1000px;
   text-align: justify;
+  background-color: #ffffffc5;
+  backdrop-filter: blur(5px);
+  padding: 10px;
 }
